--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Holberton AirBnB</title>
+	<title>notrebloh AirBnB</title>
 
 	<!-- FAVICON -->
 
@@ -29,7 +29,7 @@
 
 	<!-- FOOTER -->
 	<footer>
-	  Holberton School
+	  notrebloh School
 	</footer>
 
   </body>
