--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Holberton AirBnB</title>
+	<title>notrebloh AirBnB</title>
 
 	<!-- ********************** FAVICON -->
 	<link rel="shortcut icon" href="images/icon.png">
@@ -41,7 +41,7 @@
 	</main>
 	<!-- ********************** FOOTER -->
 	<footer>
-	  Holberton School
+	  notrebloh School
 	</footer>
   </body>
 </html>
